# musician-dial

./: .gitignore  CMakeLists.txt  GuitarVaultIntegrationReqs.md  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  idf_component.yml  main.c
main/Buzzer/: Buzzer.c  Buzzer.h
main/CircleOfFifths/: circle_of_fifths_ui.c  circle_of_fifths_ui.h
main/Debug/: screenshot.c  screenshot.h
main/EXIO/: TCA9554PWR.c  TCA9554PWR.h
main/GuitarCollection/: guitar_collection.c  guitar_collection.h  guitar_collection_ui.c  guitar_collection_ui.h
main/I2C_Driver/: I2C_Driver.c  I2C_Driver.h
main/LCD_Driver/: ST7701S.c  ST7701S.h
main/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h
main/Loading/: loading_ui.c  loading_ui.h
main/Metronome/: metronome_engine.c  metronome_engine.h  metronome_ui.c  metronome_ui.h
main/Pairing/: pairing.c  pairing.h  pairing_ui.c  pairing_ui.h
main/PracticeSession/: practice_session.c  practice_session.h
main/Settings/: settings_ui.c  settings_ui.h
main/Touch_Driver/: CST820.c  CST820.h
main/WiFiProvisioning/: wifi_provisioning.c  wifi_provisioning.h  wifi_provisioning_ui.c  wifi_provisioning_ui.h
main/fonts/: lv_font_dejavu_18.c  lv_font_dejavu_28.c  lv_font_dejavu_32.c  lv_font_dejavu_48.c  lv_font_montserrat_18_bold.c  lv_font_tabler_icons_32.c
tools/: screenshot.py
